# mediadepot

./: Cargo.toml  Dockerfile  README.md
private/: README.md  index.html.tera  local.key.pem  local.pem
private/templates/: error.html  index.html  layout.html
src/: cas.rs  context.rs  cookie.rs  files.rs  filters.rs  main.rs  router.rs
src/auth/: cookie.rs  mod.rs
src/auth/key/: mod.rs
src/templates/: mod.rs
static/: index.html.hbs
static/css/: mediadepot.css
