[package]
name = "mediadepot"
version = "1.0.1"
authors = ["Charles Tabor <chastabor@gmail.com>"]

[dependencies]
futures = "0.1.17"
hyper = "0.11.25"
tokio-core = "0.1.11"
tokio-proto = "0.1.1"
# Use rustls for front end to stick with rust protected ssl
hyper-rustls = "0.11.0"
# use openssl for backend CAS requests as it doesn't implement forward secrecy
hyper-openssl = "0.3.0"
url = "1.7.0"
xml-rs = "^0.7"
percent-encoding = "1.0.0"
base64 = "0.6.0"
lazy_static = "1.0"
mime = "0.3.5"
mime_guess = "1.8.4"
serde = "1.0.44"
serde_json = "1.0.17"
serde_derive = "1.0.44"
chrono = "0.4.2"
time = "0.1.39"
tera = "0.11.7"
error-chain = "0.11"
#rayon-core = "1.3.0"
# keep the following in sync with rustls
jsonwebtoken = "4.0.1"
ring  = "0.12.0"
rustls = "0.11.0"
tokio-rustls = "0.4.0"
