[package]
name = "mediadepot"
edition = "2018"
version = "0.3.0"
authors = ["Charles Tabor <chastabor@protonmail.com>"]

[dependencies]
lazy_static = "1.1.0"
tower-web = { git = "https://github.com/txstate-etc/tower-web", rev = "f53583143f3", features = ["async-await-preview", "rustls"] }
tokio = "0.1.10"
hyper = "0.12.10"
futures = "0.1.18"
hyper-rustls = "0.14.0"
maud = "0.19.0"
http = "0.1.7"
chrono = "0.4.2"
serde = "1.0.44"
serde_json = "1.0.17"
serde_derive = "1.0.44"
humansize = "1.1.0"
base64 = "0.6.0"
ring  = "0.13.2"
percent-encoding = "1.0.0"
jsonwebtoken = "5.0.1"
xml-rs = "0.7"
bytes = "0.4.7"
tokio-rustls = "0.8.0"
tokio-io = "0.1.7"
env_logger = "0.6.0"
